# greeterbot

./: .editorconfig  .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
src/greeterbot/: __main__.py  checklist.xdc
src/isolationbot/: __main__.py
tests/: test_basicpy.py
