[metadata]
name = basicpy
version = 0.0.1
author = Thomas Lindner
author_email = tom@dl6tom.de
description = Basic python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.0x90.space/vmann/basicpy
project_urls =
    Bug Tracker = https://git.0x90.space/vmann/basicpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
#install_requires =
#    dependency

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    basicpy = basicpy:main

[tox:tox]
envlist = py38, py39
isolated_build = True

[testenv]
deps =
    black
    flake8
    mypy
    pytest
commands =
    black --check --diff src tests
    flake8 src tests
    mypy src tests
    pytest tests

[flake8]
max_line_length = 88
