[metadata]
name = greeterbot
version = 0.0.1
author = missytake
author_email = missytake@systemli.org
description = Basic python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/missytake/greeterbot
project_urls =
    Bug Tracker = https://github.com/missytake/greeterbot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    deltachat

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    greeterbot = greeterbot.__main__:main

[tox:tox]
envlist = lint, py38, py39
isolated_build = True

[testenv:lint]
skip_install = True
deps =
    black
    flake8
    mypy
commands =
    black --check --diff src tests
    flake8 src tests
    mypy --disallow-untyped-defs src tests

[testenv]
deps =
    pytest
commands =
    pytest tests

[flake8]
max_line_length = 88
